# caseops

./: .dockerignore  .gitignore  .impeccable.md  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  e2e-walkthrough.js  package-lock.json  package.json  playwright.app.config.ts  playwright.config.ts  playwright.marketing.config.ts  playwright.prod-ram.config.ts  playwright.smoke.config.ts
apps/api/: .coverage  .env.example  Dockerfile  README.md  alembic.ini  caseops.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260416_0001_initial_schema.py  20260416_0002_matter_workspace.py  20260416_0003_matter_attachments.py  20260416_0004_billing_foundation.py  20260416_0005_invoice_payments.py  20260416_0006_contract_workspace.py  20260416_0007_contract_attachments.py  20260416_0008_document_indexing.py  20260416_0009_document_processing_jobs.py  20260416_0010_matter_court_sync.py  20260416_0011_matter_court_sync_jobs.py  20260416_0012_authority_corpus.py  20260416_0013_authority_graph.py  20260416_0014_outside_counsel.py  20260416_0015_matter_tasks.py  20260417_0001_security_hardening.py  20260417_0002_ai_core_tables.py  20260417_0003_authority_embeddings.py  20260417_0004_hearing_packs.py  20260417_0005_drafting_studio.py  20260418_0001_audit_events.py  20260418_0002_matter_acl.py  20260418_0003_courts_judges.py  20260418_0004_matter_attachment_embeddings.py  20260418_0005_evaluation_runs.py  20260418_0006_authority_annotations.py  20260418_0007_audit_export_jobs.py  20260418_0008_widen_model_run_status.py  20260418_0009_matter_deadlines_and_ai_policy.py  20260418_0010_intake_requests_and_extended_roles.py  20260418_0011_teams_and_team_scoping.py  20260419_0001_corpus_quality_structured_extraction.py  20260421_0001_matter_attachment_annotations.py  20260421_0002_draft_facts_json.py  20260421_0003_clients.py  20260422_0001_hearing_reminders.py  20260422_0002_clients_full_address.py  20260423_0001_matter_summary_cache.py  20260423_0002_communications.py  20260423_0003_email_templates.py  (+10 more)
apps/api/src/caseops_api/: __init__.py  main.py
apps/api/src/caseops_api/api/: __init__.py  dependencies.py  router.py
apps/api/src/caseops_api/api/routes/: __init__.py  admin.py  ai.py  auth.py  authorities.py  bootstrap.py  calendar.py  clients.py  communications.py  companies.py  contracts.py  courts.py  drafting.py  email_templates.py  health.py  intake.py  matters.py  meta.py  notifications.py  outside_counsel.py  payments.py  portal.py  recommendations.py  statutes.py  teams.py
apps/api/src/caseops_api/core/: cookies.py  csrf.py  observability.py  password_policy.py  problem_details.py  rate_limit.py  request_context.py  security.py  settings.py
apps/api/src/caseops_api/db/: __init__.py  base.py  migrations.py  models.py  session.py
apps/api/src/caseops_api/schemas/: __init__.py  ai.py  audit.py  auth.py  authorities.py  billing.py  calendar.py  clients.py  communications.py  companies.py  contracts.py  document_processing.py  drafting_templates.py  drafts.py  email_templates.py  hearing_packs.py  intake.py  matter_access.py  matters.py  outside_counsel.py  recommendations.py  teams.py
apps/api/src/caseops_api/scripts/: audit_model_spend.py  backfill_corpus_quality.py  backfill_delhi_hc_judge_career.py  backfill_hc_judges_from_corpus.py  backfill_judge_aliases.py  backfill_sc_judge_career.py  backfill_self_citation_map.py  backfill_title_chunks.py  enrich_delhi_hc_judges.py  enrich_sci_judges.py  enrich_statute_sections.py  eval_citations.py  eval_drafting.py  eval_drafting_types.py  eval_hnsw_recall.py  eval_workflows.py  extract_authority_citations.py  extract_authority_metadata.py  ingest_corpus.py  populate_authorities.py  reextract_placeholder_titles.py  refresh_bench_analysis_layers.py  resolve_authority_statutes.py  resolve_cause_list_benches.py  seed_demo.py  seed_hc_judges.py  seed_sci_judges.py  seed_statutes.py  send_hearing_reminders.py
apps/api/src/caseops_api/scripts/seed_data/: delhi-hc_sitting_judges.json  (+2 more)
apps/api/src/caseops_api/services/: __init__.py  appeal_strength.py  audit.py  audit_exports.py  authorities.py  authority_annotations.py  authority_sources.py  bench_analysis_layers.py  bench_matcher.py  bench_resolver.py  bench_strategy.py  bench_strategy_context.py  briefing.py  calendar.py  citation_extraction.py  citations.py  clients.py  communications.py  contract_intelligence.py  contract_redline.py  contract_review.py  contracts.py  corpus_ingest.py  corpus_structured.py  corpus_title_reextract.py  corpus_title_validation.py  court_sync_jobs.py  court_sync_sources.py  deadlines.py  document_jobs.py  document_processing.py  document_storage.py  draft_type_validators.py  draft_validators.py  drafting.py  drafting_preview.py  drafting_prompts.py  drafting_suggestions.py  email_templates.py  embeddings.py  (+36 more)
apps/api/src/caseops_api/workers/: __init__.py  document_processor.py
apps/api/tests/: __init__.py  conftest.py  test_ai_policy_enforcement.py  test_ai_route_governance.py  test_appeal_strength.py  test_audit_coverage.py  test_audit_events.py  test_audit_export_async.py  test_auth_company.py  test_auth_cookies.py  test_authorities.py  test_authority_annotations.py  test_backfill_hc_judges_from_corpus.py  test_bench_analysis_layers.py  test_bench_matcher.py  test_bench_resolver.py  test_bench_specific_context.py  test_bench_strategy_context.py  test_calendar.py  test_citation_extraction.py  test_citations.py  test_clients.py  test_communications.py  test_company_profile_and_matters.py  test_contract_intelligence.py  test_contracts.py  test_corpus_ingest.py  test_corpus_title_reextract.py  test_courts_registry.py  test_deadlines.py  test_document_storage.py  test_document_worker.py  test_draft_type_validators.py  test_draft_validators.py  test_drafting_goldens.py  test_drafting_preview.py  test_drafting_studio.py  test_drafting_suggestions.py  test_drafting_templates.py  test_email_templates.py  (+63 more)
apps/api/tests/fixtures/drafting/: anticipatory_bail.json  bail.json  cheque_bounce_notice.json  civil_suit.json  misc_templates.json
(+293 files in other folders)
