[project]
name = "caseops-api"
version = "0.1.0"
description = "CaseOps backend API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.135.2",
  "pydantic-settings==2.11.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "uvicorn[standard]==0.43.0",
  "httpx==0.28.1",
  "email-validator==2.3.0",
  "psycopg[binary]==3.3.3",
  "PyJWT==2.12.1",
  "python-multipart==0.0.26",
  "pdfminer.six==20260107",
  "pypdfium2==5.7.0",
  "Pillow==12.2.0",
  "google-cloud-storage==3.10.1",
  "slowapi>=0.1.9",
  "boto3>=1.35.0",
  "python-docx>=1.1.2",
  "google-genai>=1.73.1",
  "anthropic>=0.96.0",
  "voyageai>=0.3.7",
]

[project.optional-dependencies]
embeddings = [
  "fastembed>=0.4.0",
]
ocr = [
  "rapidocr>=3.4.0",
  "pytesseract>=0.3.13",
]
# Observability. All opt-in via CASEOPS_OTEL_ENABLED; the skeleton in
# core/observability.py degrades gracefully when these are absent so
# local + CI stay fast. Cloud Run / staging builds install via
# `pip install .[observability]` in the Dockerfile.
observability = [
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
]

[project.scripts]
caseops-document-worker = "caseops_api.workers.document_processor:main"
caseops-populate-authorities = "caseops_api.scripts.populate_authorities:main"
caseops-ingest-corpus = "caseops_api.scripts.ingest_corpus:main"
caseops-extract-authority-metadata = "caseops_api.scripts.extract_authority_metadata:main"
caseops-eval-drafting = "caseops_api.scripts.eval_drafting:main"
caseops-eval-citations = "caseops_api.scripts.eval_citations:main"
caseops-eval-workflows = "caseops_api.scripts.eval_workflows:main"
caseops-eval-hnsw-recall = "caseops_api.scripts.eval_hnsw_recall:main"
caseops-backfill-corpus-quality = "caseops_api.scripts.backfill_corpus_quality:main"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.13.0"
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caseops_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["caseops_api"]
