[project]
name = "caseops-api"
version = "0.1.0"
description = "CaseOps backend API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.135.2",
  "pydantic-settings==2.11.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "uvicorn[standard]==0.43.0",
  "httpx==0.28.1",
  "email-validator==2.3.0",
  "psycopg[binary]==3.3.3",
  "PyJWT==2.12.1",
  "python-multipart==0.0.26",
  "pdfminer.six==20260107",
  "pypdfium2==5.7.0",
  "Pillow==12.2.0",
  "google-cloud-storage==3.10.1",
  "slowapi>=0.1.9",
  "boto3>=1.35.0",
  "python-docx>=1.1.2",
  "fpdf2>=2.8.4",
  "google-genai>=1.73.1",
  "anthropic>=0.96.0",
  "voyageai>=0.3.7",
  "fastembed>=0.4.0",
  "clamd>=1.0.2",
]

[project.optional-dependencies]
embeddings = [
  "fastembed>=0.4.0",
]
ocr = [
  "rapidocr>=3.4.0",
  "pytesseract>=0.3.13",
]
# Docling — richer PDF/DOCX extractor. Opt-in because the PyTorch
# transitive dependency is heavy (~600 MB). When
# CASEOPS_PDF_EXTRACTOR=docling is set at runtime and the package is
# installed, document_processing uses Docling; otherwise the default
# pdfminer + tesseract pipeline runs unchanged. Install with
# `pip install .[docling]` in deployments that want it.
docling = [
  "docling>=2.0.0",
]
# Observability. All opt-in via CASEOPS_OTEL_ENABLED; the skeleton in
# core/observability.py degrades gracefully when these are absent so
# local + CI stay fast. Cloud Run / staging builds install via
# `pip install .[observability]` in the Dockerfile.
observability = [
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
]

[project.scripts]
caseops-document-worker = "caseops_api.workers.document_processor:main"
caseops-populate-authorities = "caseops_api.scripts.populate_authorities:main"
caseops-ingest-corpus = "caseops_api.scripts.ingest_corpus:main"
caseops-extract-authority-metadata = "caseops_api.scripts.extract_authority_metadata:main"
caseops-eval-drafting = "caseops_api.scripts.eval_drafting:main"
caseops-eval-drafting-types = "caseops_api.scripts.eval_drafting_types:main"
caseops-eval-citations = "caseops_api.scripts.eval_citations:main"
caseops-eval-workflows = "caseops_api.scripts.eval_workflows:main"
caseops-eval-hnsw-recall = "caseops_api.scripts.eval_hnsw_recall:main"
caseops-seed-demo = "caseops_api.scripts.seed_demo:main"
caseops-backfill-corpus-quality = "caseops_api.scripts.backfill_corpus_quality:main"
caseops-backfill-title-chunks = "caseops_api.scripts.backfill_title_chunks:main"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "ruff==0.13.0"
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caseops_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Coverage is opt-in (via --cov on the CLI or CI config) so local TDD
# loops stay fast. Codex 2026-04-20 test-suite gap audit asked for
# coverage tooling as a baseline before we set thresholds. Thresholds
# will be added in a follow-up once we have ~2 weeks of baseline data.

[tool.coverage.run]
source = ["src/caseops_api"]
branch = true
omit = [
  "*/tests/*",
  "*/scripts/*",
  "*/workers/document_processor.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["caseops_api"]
